--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,5 @@
     <string name="email">Email</string>
     <string name="submit">SUBMIT</string>
     <string name="transaction_id">Transaction Id</string>
+    <string name="webviewtitle">Video Description</string>
 </resources>
