--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,8 @@
     <string name="premium">Premium</string>
     <string name="login">Login</string>
     <string name="about">About</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_a_class">Choose a class</string>
+    <string name="choose_a_subject">Choose a subject</string>
 </resources>
